Global Notices: fixed broken css action button in update notice.

--- a/client/components/notice/style.scss
+++ b/client/components/notice/style.scss
@@ -159,7 +159,8 @@ a.notice__action {
 	.is-success &,
 	.is-error &,
 	.is-warning &,
-	.is-info & {
+	.is-info &,
+	.is-update & {
 		color: $white;
 	}
 
@@ -167,6 +168,7 @@ a.notice__action {
 	.is-error & { background: darken( $alert-red, 15 ); }
 	.is-warning & { background: darken( $alert-yellow, 15 ); }
 	.is-info & { background: darken( $blue-wordpress, 15 ); }
+	.is-update & { background: darken( $orange-jazzy, 15 ); }
 
 	.gridicon {
 		margin-left: 8px;
